--- a/pom.xml
+++ b/pom.xml
@@ -42,9 +42,9 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-    <groupId>org.springdoc</groupId>
-    <artifactId>springdoc-openapi-ui</artifactId>
-    <version>1.6.4</version>
+    <groupId>io.springfox</groupId>
+    <artifactId>springfox-boot-starter</artifactId>
+    <version>3.0.0</version>
 </dependency>
 	</dependencies>
 
