--- a/.settings/org.springframework.ide.eclipse.boot.prefs
+++ b/.settings/org.springframework.ide.eclipse.boot.prefs
@@ -1,2 +1,2 @@
 eclipse.preferences.version=1
-spring.boot.launch.profile.history=\ reactive,nameOption2; reactive, nameOption2; reactive, nameOption; reactive;
+spring.boot.launch.profile.history=nameOption2;optionName2; reactive,nameOption2; reactive, nameOption2; reactive, nameOption; reactive;
