--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -32,7 +32,7 @@ on:
 
 env:
   AWS_REGION: us-east-1                   # set this to your preferred AWS region, e.g. us-west-1
-  ECR_REPOSITORY: djmckay-tech           # set this to your Amazon ECR repository name
+  ECR_REPOSITORY: disney-weather-service           # set this to your Amazon ECR repository name
   ECS_SERVICE: weather-service-app                # set this to your Amazon ECS service name
   ECS_CLUSTER: weather-service-cluster                 # set this to your Amazon ECS cluster name
   ECS_TASK_DEFINITION: aws/weather-service-run-task.json # set this to the path to your Amazon ECS task definition
