--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -33,11 +33,11 @@ on:
 env:
   AWS_REGION: us-east-1                   # set this to your preferred AWS region, e.g. us-west-1
   ECR_REPOSITORY: disney-weather-service           # set this to your Amazon ECR repository name
-  ECS_SERVICE: weather-service-app                # set this to your Amazon ECS service name
-  ECS_CLUSTER: weather-service-cluster                 # set this to your Amazon ECS cluster name
+  ECS_SERVICE: disney-weather-service-app                # set this to your Amazon ECS service name
+  ECS_CLUSTER: disney-weather-service-cluster                 # set this to your Amazon ECS cluster name
   ECS_TASK_DEFINITION: aws/weather-service-run-task.json # set this to the path to your Amazon ECS task definition
                                                # file, e.g. .aws/task-definition.json
-  CONTAINER_NAME: weather-service           # set this to the name of the container in the
+  CONTAINER_NAME: disnery-weather-service           # set this to the name of the container in the
                                                # containerDefinitions section of your task definition
 
 permissions:
