--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,8 +28,12 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
-
-    # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-    - name: Update dependency graph
-      uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+      run: |
+           mvn clean install
+           mkdir artifacts && cp target/*.jar artifacts
+           cd artifacts && ls
+    - name: Save artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: github-action-artifact
+        path: artifacts
