--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -44,6 +44,28 @@ permissions:
   contents: read
 
 jobs:
+  build:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v3
+    - name: Set up JDK 17
+      uses: actions/setup-java@v3
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+        cache: maven
+    - name: Build with Maven
+      run: |
+           mvn clean install
+           mkdir artifacts && cp target/*.jar artifacts
+           cd artifacts && ls
+    - name: Save artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: github-action-artifact
+        path: artifacts
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
