--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -74,7 +74,17 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v3
+    - name: Set up JDK 17
+      uses: actions/setup-java@v2
+      with:
+        java-version: 17
+        distribution: 'adopt'
 
+    - name: Download JAR file
+      uses: actions/download-artifact@v2
+      with:
+        name: github-action-artifact
+        path: target
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
