--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -44,28 +44,6 @@ permissions:
   contents: read
 
 jobs:
-  build:
-
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        cache: maven
-    - name: Build with Maven
-      run: |
-           mvn clean install
-           mkdir artifacts && cp target/*.jar artifacts
-           cd artifacts && ls
-    - name: Save artifact
-      uses: actions/upload-artifact@v2
-      with:
-        name: github-action-artifact
-        path: artifacts
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
@@ -74,17 +52,14 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v3
-    - name: Set up JDK 17
-      uses: actions/setup-java@v2
+    - uses: actions/checkout@v2
+    - name: Set up JDK 1.8
+      uses: actions/setup-java@v1
       with:
-        java-version: 17
-        distribution: 'adopt'
+        java-version: 1.8
+    - name: Build with Maven
+      run: mvn clean install
 
-    - name: Download JAR file
-      uses: actions/download-artifact@v2
-      with:
-        name: github-action-artifact
-        path: artifacts
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
