--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -52,11 +52,11 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v3
-    - uses: actions/checkout@v2
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
+    - name: Set up JDK 17
+      uses: actions/setup-java@v2
       with:
-        java-version: 1.8
+        java-version: 17
+        distribution: 'adopt'
     - name: Build with Maven
       run: mvn clean install
 
