--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,11 @@
 	<artifactId>springfox-swagger-ui</artifactId>
 	<version>3.0.0</version>
 </dependency>
+<dependency>
+    <groupId>com.fasterxml.jackson.datatype</groupId>
+    <artifactId>jackson-datatype-jsr310</artifactId>
+    <version>2.9.7</version>
+</dependency>
 	</dependencies>
 
 	<build>
