--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.17</version>
+		<version>3.2.3</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>tech.djmckay</groupId>
@@ -14,7 +14,7 @@
 	<name>weather-service</name>
 	<description>weather-service project for Spring Boot</description>
 	<properties>
-		<java.version>14</java.version>
+		<java.version>17</java.version>
 
 	</properties>
 	<dependencies>
@@ -42,22 +42,12 @@
 			<artifactId>reactor-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		
-	<dependency>
-	<groupId>io.springfox</groupId>
-	<artifactId>springfox-boot-starter</artifactId>
-	<version>3.0.0</version>
-</dependency>	
-<dependency>
-	<groupId>io.springfox</groupId>
-	<artifactId>springfox-swagger2</artifactId>
-	<version>3.0.0</version>
+		<dependency>
+   <groupId>org.springdoc</groupId>
+   <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+   <version>2.0.2</version>
 </dependency>
-<dependency>
-	<groupId>io.springfox</groupId>
-	<artifactId>springfox-swagger-ui</artifactId>
-	<version>3.0.0</version>
-</dependency>
+	
 <dependency>
     <groupId>com.fasterxml.jackson.datatype</groupId>
     <artifactId>jackson-datatype-jsr310</artifactId>
